<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/label_home" />

        <item
            android:id="@+id/nav_add_patient"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/label_add_patient" />

        <item
            android:id="@+id/nav_all_patients"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/label_all_patients" />

        <item
            android:id="@+id/nav_new_week_entries"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/label_new_week_entries" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/label_notification" />

    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
