<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/coronary_risk_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/light_grey"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/coronary_risk_factors"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cholesterol_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/content_spacing"
            android:textColorHint="@color/half_black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cholesterol_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_cholesterol_hint"
                android:inputType="textAutoComplete|textCapWords"
                android:textColor="@color/half_black"
                android:textColorHint="@color/half_black"
                android:textSize="@dimen/input_field_size">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hdl_c_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/content_spacing"
            android:textColorHint="@color/half_black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hdl_c_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hdl_c_hint"
                android:inputType="textAutoComplete|textCapWords"
                android:textColor="@color/half_black"
                android:textColorHint="@color/half_black"
                android:textSize="@dimen/input_field_size">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Ldl_c_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/content_spacing"
            android:textColorHint="@color/half_black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Ldl_c_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Ldl_c_hint"
                android:inputType="textAutoComplete|textCapWords"
                android:textColor="@color/half_black"
                android:textColorHint="@color/half_black"
                android:textSize="@dimen/input_field_size">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_spacing"
            android:layout_margin="@dimen/content_spacing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:text="@string/label_submit" />


    </LinearLayout>

</ScrollView>